python/tests/unit/test_envoy_v3/authenticationhttpbufferedtest/econf-aes.json
{
  "layered_runtime": {
    "layers": [
      {
        "name": "static_layer",
        "static_layer": {
          "envoy.reloadable_features.ext_authz_http_service_enable_case_sensitive_string_matcher": false,
          "re2.max_program_size.error_level": 200
        }
      }
    ]
  },
  "static_resources": {
    "clusters": [
      {
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_127_0_0_1_8500_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "127.0.0.1",
                        "port_value": 8500,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_127_0_0_1_8500_default",
        "type": "STRICT_DNS"
      },
      {
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_127_0_0_1_8877_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "127.0.0.1",
                        "port_value": 8877,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_127_0_0_1_8877_default",
        "type": "STRICT_DNS"
      },
      {
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_authenticationhttpbufferedtest_http_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "authenticationhttpbufferedtest-http",
                        "port_value": 80,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_authenticationhttpbufferedtest_http_default",
        "type": "STRICT_DNS"
      },
      {
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_extauth_authenticationhttpbuffer-0",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "authenticationhttpbufferedtest-http-auth",
                        "port_value": 443,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_extauth_authenticationhttpbuffer-0",
        "transport_socket": {
          "name": "envoy.transport_sockets.tls",
          "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "common_tls_context": {
              "tls_certificates": [
                {
                  "certificate_chain": {
                    "filename": "/tmp/ambassador/snapshots/default/secrets-decoded/auth-buffered-secret/6B4919697C5D70BB8E4A73A59DDF51A53AE24264.crt"
                  },
                  "private_key": {
                    "filename": "/tmp/ambassador/snapshots/default/secrets-decoded/auth-buffered-secret/6B4919697C5D70BB8E4A73A59DDF51A53AE24264.key"
                  }
                }
              ]
            }
          }
        },
        "type": "STRICT_DNS"
      }
    ],
    "listeners": [
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 8080,
            "protocol": "TCP"
          }
        },
        "filter_chains": [
          {
            "filter_chain_match": {},
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "format": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n",
                        "path": "/dev/fd/1"
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.buffer",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.buffer.v3.Buffer",
                        "max_request_bytes": 16384
                      }
                    },
                    {
                      "name": "envoy.filters.http.ext_authz",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz",
                        "clear_route_cache": true,
                        "http_service": {
                          "authorization_request": {
                            "allowed_headers": {
                              "patterns": [
                                {
                                  "exact": "authorization"
                                },
                                {
                                  "exact": "cookie"
                                },
                                {
                                  "exact": "from"
                                },
                                {
                                  "exact": "location"
                                },
                                {
                                  "exact": "proxy-authorization"
                                },
                                {
                                  "exact": "requested-cookie"
                                },
                                {
                                  "exact": "requested-header"
                                },
                                {
                                  "exact": "requested-status"
                                },
                                {
                                  "exact": "user-agent"
                                },
                                {
                                  "exact": "x-bar"
                                },
                                {
                                  "exact": "x-foo"
                                },
                                {
                                  "exact": "x-forwarded-for"
                                },
                                {
                                  "exact": "x-forwarded-host"
                                },
                                {
                                  "exact": "x-forwarded-proto"
                                }
                              ]
                            },
                            "headers_to_add": [
                              {
                                "key": "l5d-dst-override",
                                "value": "extauth:443"
                              }
                            ]
                          },
                          "authorization_response": {
                            "allowed_client_headers": {
                              "patterns": [
                                {
                                  "exact": "authorization"
                                },
                                {
                                  "exact": "location"
                                },
                                {
                                  "exact": "proxy-authenticate"
                                },
                                {
                                  "exact": "set-cookie"
                                },
                                {
                                  "exact": "www-authenticate"
                                },
                                {
                                  "exact": "x-foo"
                                }
                              ]
                            },
                            "allowed_upstream_headers": {
                              "patterns": [
                                {
                                  "exact": "authorization"
                                },
                                {
                                  "exact": "location"
                                },
                                {
                                  "exact": "proxy-authenticate"
                                },
                                {
                                  "exact": "set-cookie"
                                },
                                {
                                  "exact": "www-authenticate"
                                },
                                {
                                  "exact": "x-foo"
                                }
                              ]
                            }
                          },
                          "path_prefix": "/extauth",
                          "server_uri": {
                            "cluster": "cluster_extauth_authenticationhttpbuffer-0",
                            "timeout": "5.000s",
                            "uri": "https://extauth"
                          }
                        },
                        "with_request_body": {
                          "allow_partial_message": true,
                          "max_request_bytes": 4096
                        }
                      }
                    },
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "normalize_path": true,
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "ambassador-listener-8080-*",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/.well-known/acme-challenge/"
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8500_default",
                              "prefix_rewrite": "/.well-known/acme-challenge/",
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/.ambassador/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8500_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8500"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8500_default",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/.ambassador/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8500_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8500"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8500_default",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/edge_stack/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8500_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8500"
                                }
                              }
                            ],
                            "response_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "x-content-type-options",
                                  "value": "nosniff"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8500_default",
                              "prefix_rewrite": "/edge_stack_ui/edge_stack/",
                              "priority": null,
                              "timeout": "60.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/edge_stack/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8500_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8500"
                                }
                              }
                            ],
                            "response_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "x-content-type-options",
                                  "value": "nosniff"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8500_default",
                              "prefix_rewrite": "/edge_stack_ui/edge_stack/",
                              "priority": null,
                              "timeout": "60.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_authenticationhttpbufferedtest_http_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "authenticationhttpbufferedtest-http:80"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_authenticationhttpbufferedtest_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_authenticationhttpbufferedtest_http_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "authenticationhttpbufferedtest-http:80"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_authenticationhttpbufferedtest_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8500_default"
                              },
                              "safe_regex": {
                                "google_re2": {
                                  "max_program_size": 200
                                },
                                "regex": "^/$"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8500"
                                }
                              }
                            ],
                            "response_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "x-content-type-options",
                                  "value": "nosniff"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8500_default",
                              "prefix_rewrite": "/edge_stack_ui/",
                              "priority": null,
                              "timeout": "60.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8500_default"
                              },
                              "safe_regex": {
                                "google_re2": {
                                  "max_program_size": 200
                                },
                                "regex": "^/$"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8500"
                                }
                              }
                            ],
                            "response_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "x-content-type-options",
                                  "value": "nosniff"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8500_default",
                              "prefix_rewrite": "/edge_stack_ui/",
                              "priority": null,
                              "timeout": "60.000s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "server_name": "envoy",
                  "stat_prefix": "ingress_http",
                  "use_remote_address": true,
                  "xff_num_trusted_hops": 0
                }
              }
            ]
          }
        ],
        "listener_filters": [],
        "name": "ambassador-listener-8080",
        "traffic_direction": "UNSPECIFIED"
      }
    ]
  }
}
